kind/ckad-scratch/10/metered.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: metered
  name: metered
spec:
  containers:
  - image: nginx:1.25
    name: metered
    resources: 
      requests:
        memory: "96Mi"
        cpu: "120m"
      limits:
        memory: "224Mi"
        cpu: "300m"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
